Update 웹스크레핑 코드 설명.md

--- a/CNN_DATASET/웹스크레핑 코드 설명.md
+++ b/CNN_DATASET/웹스크레핑 코드 설명.md
@@ -1,8 +1,7 @@
 # 코드 설명 ⭐
 
 ### 1. 라이브러리
-<pre><code>
-import os
+<pre><code>import os
 import urllib.request
 import cv2
 import numpy as np
@@ -39,8 +38,7 @@ image_urls = {
 }</code></pre>
 
 ### 참고
-<pre><code>
-image_urls = [
+<pre><code>image_urls = [
     "https://example.com/image1.jpg",
     "https://example.com/image2.jpg",
     "https://example.com/image3.jpg",
