--- a/알고리즘_색상 분류/클러스터링_스케치코드.md
+++ b/알고리즘_색상 분류/클러스터링_스케치코드.md
@@ -1,4 +1,4 @@
-# 설명 🏁
+# 설명 ✔️
 
 <pre><code>기준 색상 3개 3차원 색공간에 배치
 
@@ -28,7 +28,7 @@ k=n 일떄
 
 <br>
 
-# 스케치 코드 (숫자는 예시) 🏁
+# 스케치 코드 (숫자는 예시) ✔️
 
 <pre><code>기준 색상 색공간에 배치 (전역 변수로 3개의 RGB 색상을 정의만 하면 됨)
 A색 = [1,2,3]
